# ai-infra-handbook

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PUBLICATION_CHECKLIST.md  README.md  RELEASE_NOTES.md  SECURITY.md  llms.txt  package-lock.json  package.json  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml  pull_request_template.md
docs/: index.md
projects/ai-gateway/: .env.example  Makefile  README.md  pyproject.toml
projects/ai-gateway/configs/: config.yaml  models.yaml
projects/ai-gateway/scripts/: serve.sh
projects/ai-gateway/src/ai_gateway/: config.py  main.py  router.py  runtime.py  server.py
projects/ai-gateway/src/ai_gateway/middleware/: __init__.py  auth.py
projects/ai-gateway/tests/: conftest.py  test_proxy.py
projects/eval-module/: .env.example  Makefile  README.md  pyproject.toml
projects/eval-module/scripts/: run_benchmark.sh
projects/eval-module/src/eval_module/: main.py
projects/eval-module/src/eval_module/results/: __init__.py  result_store.py
projects/eval-module/src/eval_module/runners/: __init__.py  base.py  factory.py  lm_eval_runner.py
projects/eval-module/tests/: test_runner.py
projects/finetune-demo/: .env.example  Makefile  README.md  pyproject.toml
projects/finetune-demo/configs/lora/: lora_config_qwen_05b.yaml
projects/finetune-demo/configs/qlora/: qlora_config_qwen_05b.yaml
projects/finetune-demo/data/: train.jsonl
projects/finetune-demo/scripts/: train.sh
projects/finetune-demo/src/finetune_demo/: artifacts.py  config.py  dataset_registry.py  main.py  run_history.py
projects/finetune-demo/src/finetune_demo/export/: __init__.py  adapter_exporter.py
projects/finetune-demo/src/finetune_demo/trainer/: __init__.py  base.py  lora_trainer.py
projects/finetune-demo/tests/: test_trainer.py
projects/inference-service/: .env.example  Makefile  README.md  config.local.yaml  config.yaml  pyproject.toml
projects/inference-service/scripts/: serve.sh
projects/inference-service/src/inference_service/: config.py  engines.py  main.py  runtime.py  server.py
projects/inference-service/src/inference_service/api/: __init__.py  metrics.py
projects/inference-service/tests/: conftest.py  test_api.py
prompts/: README.md
scripts/: build_assessment_pack.py  build_course_catalog.py  build_evidence_packet.py  build_launch_pack.py  build_learning_inventory.py  build_release_brief.py  build_roadmap_pack.py  build_workshop_packet.py  docs_quality_check.py  integration_smoke_test.sh  local_dev_sequence.sh  security_scan.py
tasks/: README.md  codex-task-pack-run-01.md  deep-research-run-01.md  execution-prep-run-01.md  execution-slice-run-01.md  fixture-run-01.md  (+36 more)
(+879 files in other folders)
