[project]
name = "eval-module"
version = "0.1.0"
description = "Learning-oriented benchmark evaluation scaffold"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[project.scripts]
eval-module = "eval_module.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eval_module"]
