[project]
name = "finetune-demo"
version = "0.1.0"
description = "Fine-tuning demo with LoRA and QLoRA"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[project.scripts]
finetune-demo = "finetune_demo.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finetune_demo"]
